# fs-relayer

./: .env.example  Cargo.toml  Dockerfile  Makefile  compose.yml  readme.md
.github/workflows/: docker.yml
dependences/ceramic/: Cargo.toml
dependences/ceramic/src/: event.rs  lib.rs  network.rs  stream.rs  types.rs
dependences/ceramic/src/event/: anchor.rs  cacao.rs  commit.rs  errors.rs  ipld.rs  operator.rs  signed.rs  verify.rs
dependences/ceramic/src/http/: errors.rs  mod.rs  task.rs
dependences/ceramic/src/kubo/: cache.rs  message.rs  mod.rs  store.rs  task.rs
dependences/ceramic/src/stream/: commit_id.rs  mod.rs  operator.rs  patch.rs
dependences/ceramic/src/types/: jwk.rs  jws.rs  signer.rs  stream_id.rs  strings.rs
dependences/dapp-table-client/src/: errors.rs  query.rs
fs-relayer/: Cargo.toml  api.md  readme.md
fs-relayer/src/: client.rs  config.rs  error.rs  main.rs  migration.rs  response.rs  server.rs  state.rs  task.rs
fs-store/iroh/: Cargo.toml
fs-store/iroh/src/: errors.rs  file.rs  lib.rs
fs-store/pgsql/: Cargo.toml
fs-store/pgsql/src/: errors.rs  lib.rs  models.rs  schema.rs
fs-types/: Cargo.toml
fs-types/src/: core.rs  error.rs  file.rs  lib.rs  policy.rs
fs-types/src/core/: client.rs  dapp_store.rs  errors.rs  mod.rs  stream.rs  task.rs
fs-types/src/file/: access_control.rs  action_file.rs  client.rs  common.rs  content_type.rs  errors.rs  index_file.rs  index_folder.rs  mod.rs  operator.rs  status.rs
src/: config.rs  main.rs  migration.rs  state.rs
