[package]
name = "dataverse-file-relayer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
confy = "0.5.1"
dataverse-ceramic = { git = "https://github.com/dataverse-os/network-crates", branch = "main"}
dataverse-core = { git = "https://github.com/dataverse-os/network-crates", branch = "main"}
dataverse-file-system = { git = "https://github.com/dataverse-os/network-crates", branch = "main"}
dataverse-iroh-store = { git = "https://github.com/dataverse-os/network-crates", branch = "main"}
directories = "5.0.1"
env_logger = "0.10.0"
futures = "0.3.29"
log = "0.4.20"
serde = "1.0.190"
serde_json = "1.0.108"
tokio = "1.33.0"
uuid = "1.5.0"

[patch.'https://github.com/ceramicnetwork/rust-ceramic']
ceramic-core = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }
ceramic-event = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }
ceramic-kubo-rpc-server = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }

[patch.'https://github.com/3box/rust-ceramic']
ceramic-event = { git = "https://github.com/dataverse-os/rust-ceramic", branch = "patch-kubo-block-put" }

[patch.'https://github.com/3box/ceramic-http-client-rs']
ceramic-http-client = { git = "https://github.com/dataverse-os/ceramic-http-client-rs", branch = "patch-methods"}
